Add solr query builder and reimplement responses